il reste testCubeDetection à faire